# deepseek-loop

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: release.yml
scripts/: publish.sh
src/: cache.rs  client.rs  error.rs  lib.rs  reqwest_client.rs  types.rs  wasm.rs
src/agent/: builder.rs  loop_runner.rs  messages.rs  mod.rs  options.rs  permissions.rs  pricing.rs  tool.rs
src/agent/builtin_tools/: bash.rs  cron_create.rs  cron_delete.rs  cron_list.rs  edit.rs  glob.rs  grep.rs  memory_search.rs  mod.rs  monitor.rs  read.rs  write.rs
src/agent/memory/: lance.rs  mod.rs
src/agent/scheduler/: cron.rs  jitter.rs  maintenance.rs  mod.rs  store.rs
